[gd_scene load_steps=7 format=2]

[ext_resource path="res://swipe.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://JdLed3Regular-1Xg2.ttf" type="DynamicFontData" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
void fragment() {
  COLOR = vec4(UV,.3,.6);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 3 )

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Background" type="Sprite" parent="."]
light_mask = 8
material = SubResource( 2 )
position = Vector2( 516.059, 301.267 )
scale = Vector2( 16.0808, 9.19419 )
texture = ExtResource( 2 )

[node name="BigBrush" type="Button" parent="."]
margin_left = 724.0
margin_top = 23.0
margin_right = 1018.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 5 )
text = "Big Brush"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SmallBrush" type="Button" parent="."]
light_mask = 24
margin_left = 724.0
margin_top = 83.0
margin_right = 1019.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 5 )
text = "Small Brush"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearCanavs" type="Button" parent="."]
light_mask = 24
margin_left = 722.0
margin_top = 258.0
margin_right = 1020.0
margin_bottom = 309.0
custom_fonts/font = SubResource( 5 )
text = "Clear Canvas"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transform" type="Button" parent="."]
light_mask = 24
margin_left = 722.0
margin_top = 317.0
margin_right = 1020.0
margin_bottom = 368.0
custom_fonts/font = SubResource( 5 )
text = "Transform"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransformStop" type="Button" parent="."]
light_mask = 24
margin_left = 722.0
margin_top = 381.0
margin_right = 1020.0
margin_bottom = 432.0
custom_fonts/font = SubResource( 5 )
text = "Transform Stop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorOne" type="Button" parent="."]
light_mask = 24
margin_left = 722.0
margin_top = 140.0
margin_right = 1020.0
margin_bottom = 191.0
custom_fonts/font = SubResource( 5 )
text = "Color 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorTwo" type="Button" parent="."]
light_mask = 24
margin_left = 722.0
margin_top = 199.0
margin_right = 1020.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 5 )
text = "Color 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boundry2" type="Sprite" parent="."]
position = Vector2( 713.187, 305.627 )
scale = Vector2( 0.181871, 9.30641 )
texture = ExtResource( 2 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="BigBrush" to="." method="_on_BigBrush_pressed"]
[connection signal="pressed" from="SmallBrush" to="." method="_on_SmallBrush_pressed"]
[connection signal="pressed" from="ClearCanavs" to="." method="_on_ClearCanavs_pressed"]
[connection signal="pressed" from="Transform" to="." method="_on_Transform_pressed"]
[connection signal="pressed" from="TransformStop" to="." method="_on_TransformStop_pressed"]
[connection signal="pressed" from="ColorOne" to="." method="_on_ColorOne_pressed"]
[connection signal="pressed" from="ColorTwo" to="." method="_on_ColorTwo_pressed"]
